# python-video-transcription

./: .gitignore  README.md  build.ps1  pyproject.toml  run.bat  run.sh  video-to-text.spec
openspec/changes/archive/2026-06-19-add-video-argument-transcription/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-video-argument-transcription/specs/transcription-device-fallback/: spec.md
openspec/changes/archive/2026-06-19-add-video-argument-transcription/specs/video-input-selection/: spec.md
openspec/changes/archive/2026-06-19-linux-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-linux-support/specs/linux-platform-support/: spec.md
openspec/changes/archive/2026-06-19-modernize-video-transcription-workflow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-modernize-video-transcription-workflow/specs/faster-whisper-model-management/: spec.md
openspec/changes/archive/2026-06-19-modernize-video-transcription-workflow/specs/project-documentation/: spec.md
openspec/changes/archive/2026-06-19-modernize-video-transcription-workflow/specs/uv-python-workflow/: spec.md
openspec/changes/archive/2026-06-19-modernize-video-transcription-workflow/specs/video-directory-transcription/: spec.md
scripts/: transcribe_full.py
src/video_to_text/: __main__.py  app.py  state.py  tokenizer.py  transcriber.py
tests/: test_app.py
